# ffmpeg-demo

./: .gitignore  CMakeLists.txt
audio_extract/: CMakeLists.txt  main.cc
audio_extract/golang/: audio_extract.go
demo/: CMakeLists.txt
demo/include/: simple_player.h
demo/src/: main.cc  simple_player.cc
include/: utils.h  video_encode.h
src/: main.cc  utils.cc  video_encode.cc
